adding env requirements

--- a/Emulation/Emulation.ipynb
+++ b/Emulation/Emulation.ipynb
@@ -96,6 +96,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Copy variables from the original file to the new files\n",
+    "for name, variable in nc_file.variables.items():\n",
+    "    if name in ['ela', 'topg', 'footprint']:\n",
+    "        # Create variables in the new files\n",
+    "        var1 = part1_file.createVariable(name, variable.dtype, variable.dimensions)\n",
+    "        var2 = part2_file.createVariable(name, variable.dtype, variable.dimensions)\n",
+    "\n",
+    "        # Copy variable attributes\n",
+    "        var1.setncatts(variable.__dict__)\n",
+    "        var2.setncatts(variable.__dict__)\n",
+    "\n",
+    "        # Copy variable data based on the split index\n",
+    "        var1[:] = variable[:split_index]\n",
+    "        var2[:] = variable[split_index:]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
    "outputs": [],
