--- a/Emulation/Emulation.ipynb
+++ b/Emulation/Emulation.ipynb
@@ -19,7 +19,7 @@
    "outputs": [],
    "source": [
     "# Open the netCDF file\n",
-    "nc_file = nc.Dataset('fordle/ela_data/train/ALP00_A78_C0/ex.nc', 'r')\n",
+    "nc_file = nc.Dataset('ex4k.nc', 'r')\n",
     "# Get the number of records in the file\n",
     "num_records = nc_file.dimensions['idx'].size"
    ]
@@ -63,7 +63,6 @@
    "outputs": [],
    "source": [
     "# Create dimensions in the new files \n",
-    "exclude=['x','y','idx']\n",
     "for name, dimension in nc_file.dimensions.items():\n",
     "    if name == 'idx':\n",
     "        part1_file.createDimension(name, split_index)\n",
@@ -81,28 +80,7 @@
    "source": [
     "# Copy variables from the original file to the new files\n",
     "for name, variable in nc_file.variables.items():\n",
-    "    if name not in exclude:\n",
-    "        # Create variables in the new files\n",
-    "        var1 = part1_file.createVariable(name, variable.dtype, variable.dimensions)\n",
-    "        var2 = part2_file.createVariable(name, variable.dtype, variable.dimensions)\n",
-    "        \n",
-    "        \n",
-    "        # Copy variable data based on the split index\n",
-    "        part1_file[name][:] = nc_file[name][:split_index] \n",
-    "        part2_file[name][:] = nc_file[name][split_index:] \n",
-    "\n",
-    "  "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Copy variables from the original file to the new files\n",
-    "for name, variable in nc_file.variables.items():\n",
-    "    if name in ['ela', 'topg', 'footprint']:\n",
+    "    if name in ['ela', 'topg', 'gfp','time']:\n",
     "        # Create variables in the new files\n",
     "        var1 = part1_file.createVariable(name, variable.dtype, variable.dimensions)\n",
     "        var2 = part2_file.createVariable(name, variable.dtype, variable.dimensions)\n",
@@ -127,6 +105,20 @@
     "part1_file.close()\n",
     "part2_file.close()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
